--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "An authentication library for Next.js",
   "repository": "https://github.com/iaincollins/next-auth.git",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "build": "webpack -d",
+    "prepublish": "webpack -d",
+    "watch": "webpack -d --watch"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -12,6 +16,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "isomorphic-fetch": "^2.2.1",
     "lusca": "^1.5.2",
     "nodemailer": "^4.4.2",
     "nodemailer-direct-transport": "^3.3.2",
@@ -19,9 +24,9 @@
     "uuid": "^3.2.1"
   },
   "devDependencies": {
-    "next": "^4.2.3",
-    "next-auth-client": "^1.0.0",
+    "next": "^5.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "webpack": "^3.10.0"
   }
 }
