--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "isomorphic-fetch": "^2.2.1",
     "lusca": "^1.6.0",
     "passport": "^0.4.0",
+		"regenerator-runtime": "^0.13.1",
     "rollup-plugin-babel": "^3.0.7",
     "uuid": "^3.2.1"
   },
